# FileDuplicateFinder

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc
qml/: DirectoryChooser.qml  DuplicateListView.qml  DuplicatesView.qml  StartForm.qml  main.qml
src/: CMakeLists.txt
src/directory_traverser/: CMakeLists.txt  directorytraverser.cpp  directorytraverser.h  idirectorytraverser.h
src/duplicate_data_model/: CMakeLists.txt  duplicatedatamodel.cpp  duplicatedatamodel.h
src/duplicate_finder/: CMakeLists.txt  concurrentduplicatefinder.cpp  concurrentduplicatefinder.h  duplicatefinder.cpp  duplicatefinder.h  iduplicatefinder.h
src/duplicates_model/: CMakeLists.txt  duplicatesmodel.cpp  duplicatesmodel.h
src/file_comparator/: CMakeLists.txt  basefilecomparator.cpp  basefilecomparator.h  bytefilecomparator.cpp  bytefilecomparator.h  filecomparator.cpp  filecomparator.h  hashfilecomparator.cpp  hashfilecomparator.h  ifilecomparator.h
